[gd_scene load_steps=2 format=3 uid="uid://cw8fpra043ulj"]

[ext_resource type="Script" path="res://components/attack_component.gd" id="1_q0mu1"]

[node name="AttackComponent" type="Area2D"]
script = ExtResource("1_q0mu1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
